hw12_13_14_15_16_calendar/templates/calendar-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-scheduler-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-scheduler
  template:
    metadata:
      labels:
        app: calendar-scheduler
    spec:
      containers:
      - name: calendar-scheduler-container
        image: calendar-scheduler:1.0.1
        imagePullPolicy: Never
