hw12_13_14_15_16_calendar/templates/calendar-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-app-service
  namespace: default
spec:
  selector:
    app: calendar-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
    - name: grpc
      protocol: TCP
      port: 8090
      targetPort: 8090
      nodePort: 30001
  type: NodePort
