hw12_13_14_15_16_calendar/templates/calendar-scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-scheduler-service
  namespace: default
spec:
  selector:
    app: calendar-scheduler
  clusterIP: None
