hw12_13_14_15_16_calendar/templates/calendar-sender-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-sender-service
  namespace: default
spec:
  selector:
    app: calendar-sender
  clusterIP: None
