hw12_13_14_15_16_calendar/templates/calendar-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-grpc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"  
spec:
  ingressClassName: nginx
  rules:
  - host: calendar.service
    http:
      paths:
      - path: /grpc(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: calendar-app-service
            port:
              number: 8090
