hw12_13_14_15_16_calendar/templates/calendar-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: calendar.service
    http:
      paths:
      - path: /http(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: calendar-app-service
            port:
              number: 8080
